# oflm

./: .gitignore  Contemplative_AI_at_Femto-Scale.md  Contemplative_AI_at_Femto-Scale_peer_review_ChatGPT_DeepResearch.md  LICENSE  README.md  all_python_sources.txt  breath_trainer.py  contemplative_AI_at_Femto-Scale_o3_comments.md  contemplative_AI_at_Femto-Scale_peer_review_ChatGPT_DeepResearch_2nd.md  contemplative_spiral_haikumeadowlib.md  contemplative_spiral_letter.md  cross_validation_Claude_reaction.md  cross_validation_test.md  dew_ledger.py  requirements-dev.txt  requirements.txt  seed.md  train_meadow_fork.py
ContemplativeAI/: ContemplativeAI_An_Essay.md  ContemplativeAI_Full_Essay.md  README.md  __init__.py  breathe.py  contemplative_integration_demo.py  contemplative_metrics_framework.md  contemplative_spiral_letter.md  debug_organism.py  generator_stub.py  haiku_bridge.py  loam.py  oflm_bridge.py  organism.py  pulmonos_alpha_01_o_3.py  skepnader.py  soma.py  spiral_organism_guide.md  spiral_specification_draft.md  spiralbase.py  summary.py  temporal_intelligence_architectures.md  test_direct_stub.py  test_expression_styles.py  test_imports.py  test_oflm_direct.py  test_stub_haiku.py  (+2 more)
ContemplativeAI/spirida-python/: CONTEMPLATIVE_ARCHITECTURE.md  README.md  contemplative_mainfesto.md  contemplative_repl.py  pyproject.toml  run.py  run_interactive.py  setup.py
ContemplativeAI/spirida-python/examples/: contemplative_demo.py  presence.py  presence_garden.py
ContemplativeAI/spirida-python/experimental/: README.md  contemplative_journal.py  resonance_demo.py
(+136 files in other folders)
